--- a/src/styles/utilities/_display.scss
+++ b/src/styles/utilities/_display.scss
@@ -1,36 +1,79 @@
+// Section: Utilities
+// Module: Display
 
 @use './variables' as *;
-@use './functions' as *;
+@use './functions' as FN;
 
 // Display Mixins
-@mixin d-none { display: none; }
-@mixin d-block { display: block; }
-@mixin d-inline { display: inline; }
-@mixin d-inline-block { display: inline-block; }
+ 
+/**
+ * @description Set display to none.
+ */
+@mixin hide { display: none; }
+
+/**
+ * @description Set display to block.
+ */
+@mixin block { display: block; }
+
+/**
+ * @description Set display to inline.
+ */
+@mixin inline { display: inline; }
+
+/**
+ * @description Set display to inline-block.
+ */
+@mixin inline-block { display: inline-block; }
+
+/**
+ * @description Set display to initial original state.
+ */
+@mixin show { display: revert; }
+
+/**
+ * @description Set display to table.
+ */
 @mixin d-tbl { display: table; }
+
+/**
+ * @description Set display to table-row.
+ */
 @mixin d-tbl-row { display: table-row; }
+
+/**
+ * @description Set display to table-cell.
+ */
 @mixin d-tbl-cell { display: table-cell; }
 
+
+
+@mixin overflow-hidden { overflow: hidden; }
+
 // Base Classes 
-.hide { @include d-none; }
-.block { @include d-block; }
-.inline { @include d-inline; }
-.inline-block { @include d-inline-block; }
+.hide { @include hide; }
+.show { @include show; }
+.block { @include block; }
+.inline { @include inline; }
+.inline-block { @include inline-block; }
+.overflow-hidden { @include overflow-hidden; }
 
 .d {
   &-tbl { @include d-tbl; }
   &-tbl-row { @include d-tbl-row; }
   &-tbl-cell { @include d-tbl-cell; }
 }
-
+                 
 // Responsive Variants
 @each $breakpoint, $width in $breakpoints {
-  @media (min-width: $width) {
-    .hide\@#{$breakpoint} { @include d-none; }
-    .block\@#{$breakpoint} { @include d-block; }
-    .inline\@#{$breakpoint} { @include d-inline; }
-    .inline-block\@#{$breakpoint} { @include d-inline-block; }
-    
+  @media (min-width: #{$width}) {
+    .hide\@#{$breakpoint} { @include hide; }
+    .show\@#{$breakpoint} { @include show; }
+    .block\@#{$breakpoint} { @include block; }
+    .inline\@#{$breakpoint} { @include inline; }
+    .inline-block\@#{$breakpoint} { @include inline-block; }
+    .overflow-hidden\@#{$breakpoint} { @include overflow-hidden; }
+   
     .d {
       &-tbl\@#{$breakpoint} { @include d-tbl; }
       &-tbl-row\@#{$breakpoint} { @include d-tbl-row; }
