--- a/src/styles/utilities/_opacity.scss
+++ b/src/styles/utilities/_opacity.scss
@@ -11,7 +11,7 @@
 
 // Responsive Variants for Opacity
 @each $breakpoint, $width in $breakpoints {
-  @media (min-width: $width) {
+  @media (min-width: #{$width}) {
     @each $i in $percentages {
       .opacity-#{$i}\@#{$breakpoint} { opacity: math.div($i, 100); }
       .hover\:opacity-#{$i}\@#{$breakpoint}:hover { opacity: math.div($i, 100); }
