--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,7 @@
 /* Import variables */
 @use '../utilities/variables' as *;
 @use '../utilities/media-queries' as media;
-
+  
 :root {
   --font-family-base: system-ui, -apple-system, "BlinkMacSystemFont", 'Segoe UI', "Roboto", "Oxygen", "Ubuntu", "Cantarell", sans-serif;
 }
@@ -69,14 +69,14 @@ button {
   padding: 0.5rem 1rem;
   border: 0;
   border-radius: 0.25rem;
-  background-color: var(--button-bg-color, #007bff); // Default button color
-  color: var(--button-text-color, #ffffff);
+  background-color: var(--button-bg-color, #007BFF); // Default button color
+  color: var(--button-text-color, #FFF);
   font-family: var(--font-family-base);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 
   &:hover {
-    background-color: var(--button-bg-color-hover, #0056b3); // Hover button color
+    background-color: var(--button-bg-color-hover, #0056B3); // Hover button color
   }
   
   &:focus {
@@ -84,8 +84,8 @@ button {
   }
 
   &:disabled {
-    background-color: #e0e0e0; // Disabled button color
-    color: #a0a0a0; // Disabled text color
+    background-color: #E0E0E0; // Disabled button color
+    color: #A0A0A0; // Disabled text color
     cursor: not-allowed;
   }
 }
@@ -103,6 +103,7 @@ textarea {
   width: 100%; // Full width
   font-family: var(--font-family-base);
   transition: border 0.2s ease-in-out;
+
   &:focus {
     border-color: var(--link-color);
     outline: none;
@@ -123,6 +124,7 @@ select {
   width: 100%; // Full width
   font-family: var(--font-family-base);
   transition: border 0.2s ease-in-out;
+
   &:focus {
     border-color: var(--link-color);
     outline: none;
